--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -216,7 +216,7 @@ img{margin:0;padding:0;border:0;}
 <div>
 </div>
 
-
+<!--body开始 --------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 
 
 
