--- a/admin/view/default/mproductorder/pagelistmproductorder.html
+++ b/admin/view/default/mproductorder/pagelistmproductorder.html
@@ -33,11 +33,11 @@
 			
 					<tr id="ttitle">
 					<td class="right_2">操作</td>	
-					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=id'>订单ID</a></td>
-					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=username'>用户名</a></td>
-					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=product_id'>产品名称</a></td>
-					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=create_time'>提交时间</a></td>
-					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=status'>状态</a></td>
+					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=id'><span class="color_white">订单ID</span></a></td>
+					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=username'><span class="color_white">用户名</span></a></td>
+					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=product_id'><span class="color_white">产品名称</span></a></td>
+					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=create_time'><span class="color_white">提交时间</span></a></td>
+					<td class="right_2"><a href='?c=mproductorder&a=pageListMproductorder&order=status'><span class="color_white">状态</span></a></td>
 					</tr>
 					
 					
