--- a/admin/view/default/mproduct/pagelistmproduct.html
+++ b/admin/view/default/mproduct/pagelistmproduct.html
@@ -3,32 +3,38 @@
 <div id="container">
 	<div align="center">
 		<div class="mar_top tb_wid5" align="right">
-		<a href="?c=mproduct&a=addMproductFrom" target='main'>增加产品</a>
-			{{if $page>1}}
-			<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&&page=0'>首页</a> 
-			<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&page={{$page-1}}'>上一页</a> 
-			{{else}}
-			首页 上一页 
-			{{/if}}
-			{{if $page!=$total_page}} 
-			<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&page={{$page+1}}'>下一页</a>
-			<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&page={{$total_page}}'>尾页</a>
-			{{else}}下一页 尾页
-			{{/if}} 
-			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
+		<table width="100%" border="0" cellpadding="0" cellspacing="0">
+		  <tr>
+			<td class="right" align="left"><a href="?c=mproduct&a=addMproductFrom" target='main'><b>增加产品</b></a></td>
+			<td align="right">
+				{{if $page>1}}
+				<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&&page=0'>首页</a> 
+				<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&page={{$page-1}}'>上一页</a> 
+				{{else}}
+				首页 上一页 
+				{{/if}}
+				{{if $page!=$total_page}} 
+				<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&page={{$page+1}}'>下一页</a>
+				<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&page={{$total_page}}'>尾页</a>
+				{{else}}下一页 尾页
+				{{/if}} 
+				{{$page}}/{{$total_page}}&nbsp;
+				共计{{$count}}记录
+			</td>
+		  </tr>
+		</table>
 		</div>
 		<div class="block tb_wid5">
 				<table id="table" border="0" cellpadding="0" cellspacing="1">
 			
 					<tr id="ttitle">
 					<td class="right_2">操作</td>	
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=id">产品ID</a></td>
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=name">产品名称</a></td>
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=group_id">业务类型</a></td>
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=upid">产品组</td>
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=price">价格</td>	
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=group_id">状态</a></td>	
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=id"><span class="color_white">产品ID</span></a></td>
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=name"><span class="color_white">产品名称</span></a></td>
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=group_id"><span class="color_white">业务类型</span></a></td>
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=upid"><span class="color_white">产品组</span></a></td>
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=price"><span class="color_white">价格</span></a></td>	
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=group_id"><span class="color_white">状态</span></a></td>	
 					</tr>
 					{{foreach from=$list item=row}}
 					
