--- a/admin/view/default/mproductgroup/pagelistmproductgroup.html
+++ b/admin/view/default/mproductgroup/pagelistmproductgroup.html
@@ -5,7 +5,9 @@
 		<div class="mar_top tb_wid5" align="right">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
 		  <tr>
-			<td class="right" align="left"><a href="?c=mproductgroup&a=addMproductgroupFrom" target='main'><b>增加业务</b></a></td>
+			<td class="right" align="left">
+				<a href="?c=mproductgroup&a=addMproductgroupFrom" target='main'><b>增加业务</b></a>(注:点击业务ID可以进行排序)
+			</td>
 			<td align="right">
 				{{if $page>1}}
 				<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&&page=0'>首页</a> 
