--- a/admin/view/default/mproduct/pagelistmproduct.html
+++ b/admin/view/default/mproduct/pagelistmproduct.html
@@ -5,7 +5,9 @@
 		<div class="mar_top tb_wid5" align="right">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
 		  <tr>
-			<td class="right" align="left"><a href="?c=mproduct&a=addMproductFrom" target='main'><b>增加产品</b></a></td>
+			<td class="right" align="left">
+				<a href="?c=mproduct&a=addMproductFrom" target='main'><b>增加产品</b></a>(注:点击产品ID可以进行排序)
+			</td>
 			<td align="right">
 				{{if $page>1}}
 				<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&&page=0'>首页</a> 
