--- a/user/view/default/mproduct/index.html
+++ b/user/view/default/mproduct/index.html
@@ -7,7 +7,7 @@
 						<td style="width:15%;padding:5px;background-color:#EEEEE0;">
 							<a href='?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}'>{{$mproducts[$i].name}}</a>
 							<br><br>
-							{{$mproducts[$i].price}}&nbsp;元/年
+							{{$mproducts[$i].price/100}}&nbsp;元/年
 							<br><br>
 							<a href='?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}'>点击购买</a>
 						</td>
