--- a/user/view/default/mproduct/left.html
+++ b/user/view/default/mproduct/left.html
@@ -1,24 +1,15 @@
-<div><table cellpadding="0" cellspacing="0" id="table_r"><tr><td height="5"></td></tr></table></div>
-<!--左部文件开始-->
-	  	<div class="left_main_vh">
-			<!--虚拟主机列表代码开始-->
-			<div class="left_host"></div>
-			<div class="left_box_host l_host_wid" align="left">
-				<table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#E5E5E5">
-				{{for $i=0;$i< count($mproducts);$i++}}
-				
-					<tr>
-						<td class="wid_2"></td>
-						<td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg">
-						<a href="?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}">{{$mproducts[$i].name}}<br>
-						</td>
-						<td class="wid_l"></td>
-					</tr>
-					
-
-					{{/for}}
-			  </table>
-			</div>
-			<!--虚拟主机列表代码结束-->
-		<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
-		</div>
+<div class="left_main_vh">
+	<div class="left_host"></div>
+	<div class="left_box_host l_host_wid" align="left">
+		<table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#E5E5E5">
+			{{for $i=0;$i< count($mproducts);$i++}}
+			<tr>
+					<td class="wid_2"></td>
+					<td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg">
+					<a href="?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}">{{$mproducts[$i].name}}</a><br>
+					</td>
+			</tr>
+			{{/for}}
+	  	</table>
+	</div>
+</div>
