--- a/admin/view/default/mproduct/pagelistmproduct.html
+++ b/admin/view/default/mproduct/pagelistmproduct.html
@@ -31,12 +31,12 @@
 			
 					<tr id="ttitle">
 					<td class="right_2">操作</td>	
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=id"><span class="color_white">产品ID</span></a></td>
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=name"><span class="color_white">产品名称</span></a></td>
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=group_id"><span class="color_white">业务类型</span></a></td>
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=upid"><span class="color_white">产品组</span></a></td>
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=price"><span class="color_white">价格</span></a></td>	
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=group_id"><span class="color_white">状态</span></a></td>	
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=id">产品ID</a></td>
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=name">产品名称</a></td>
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=group_id">业务类型</a></td>
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=upid">产品组</a></td>
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=price">价格</a></td>	
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=group_id">状态</a></td>	
 					</tr>
 					{{foreach from=$list item=row}}
 					
