--- a/admin/view/default/mproductgroup/pagelistmproductgroup.html
+++ b/admin/view/default/mproductgroup/pagelistmproductgroup.html
@@ -6,7 +6,7 @@
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
 		  <tr>
 			<td class="right" align="left">
-				<a href="?c=mproductgroup&a=addMproductgroupFrom" target='main'><b>增加业务</b></a>(注:点击业务ID可以进行排序)
+				<a href="?c=mproductgroup&a=addMproductgroupFrom" target='main'><b>增加业务</b></a>
 			</td>
 			<td align="right">
 				{{if $page>1}}
@@ -31,8 +31,8 @@
 			
 					<tr id="ttitle">
 					<td class="right_2">操作</td>	
-					<td class="right_2"><a href='?c=mproductgroup&a=pageListMproductgroup&order=id'><span class="color_white">业务ID</span></a></td>
-					<td class="right_2"><a href='?c=mproductgroup&a=pageListMproductgroup&order=name'><span class="color_white">业务名称</span></a></td>
+					<td class="right_2"><a href='?c=mproductgroup&a=pageListMproductgroup&order=id'>业务ID</a></td>
+					<td class="right_2"><a href='?c=mproductgroup&a=pageListMproductgroup&order=name'>业务名称</a></td>
 					<td class="right_2"><span class="color_white">业务详情</span></td>
 					</tr>
 					{{foreach from=$list item=row}}
