--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -71,19 +71,26 @@ function updateViewResult()
 </script>
 <div style="float:center">
  <div class="padd mar_top"></div>
+ <div align="center">
   <div id="main" class="wid" > 
-  		<div  >
+  	<div class="mar_top" align="right">
+		  <table width="100%" border="0" cellpadding="0" cellspacing="0">
 		  <form action='?c={{$smarty.request.c}}&a={{$smarty.request.a}}' method='post' name='product_form'>
-		  [<a href='?c=vhostproduct&a=flush'>更新配置文件</a>]
-		  [<a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a>]
-		  <select name='product_flag' onChange="javascript:product_form.submit();">
-		  <option value='0' {{if $product_flag==0}}selected{{/if}}>所有产品</option>
-		  <option value='1' {{if $product_flag==1}}selected{{/if}}>暂停产品</option>
-		  <option value='2' {{if $product_flag==2}}selected{{/if}}>可销售产品</option>
-		  </select>
-		  <span id='updateView' color='red'></span><div class="topimg pal1">共计 {{$sum}} 条记录</div>
-		  </form>
-  		</div>
+			  <tr>
+				<td class="right" align="left">
+				  [<a href='?c=vhostproduct&a=flush'>更新配置文件</a>]
+				  [<a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a>]
+				  <select name='product_flag' onChange="javascript:product_form.submit();">
+				  <option value='0' {{if $product_flag==0}}selected{{/if}}>所有产品</option>
+				  <option value='1' {{if $product_flag==1}}selected{{/if}}>暂停产品</option>
+				  <option value='2' {{if $product_flag==2}}selected{{/if}}>可销售产品</option>
+				  </select>
+				</td>
+				<td align="right">共计 {{$sum}} 条记录</td>
+			  </tr>
+			 </form>
+	    </table>
+	</div>
    		<table cellpadding=0 cellspacing=1 id="table">
       	<tr id="ttitle">
 	        <td class='color01 right' bgcolor='#efefef'>操作</td>
@@ -138,6 +145,7 @@ function updateViewResult()
       	</tr>
 	  	{{/foreach}}
     	</table>
+  </div>
   </div>
 </div>
 </body>
