--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -91,7 +91,7 @@ function SwitchMenu(obj,sty)
 			<li><a href='?c=agent&a=listagent' target='main'>代理级别设置</a></li>
 			<!--  <li><a href='?c=agentprice&a=pageListAgentprice' target='main'>代理设置2</a></li>-->
 			<li><a href='?c=setting&a=setupMain' target='main'>首页设置</a></li>
-			 <li><a href='?c=links&a=linksFrom' target='main'>友情链接</a></li>
+			<!--   <li><a href='?c=links&a=linksFrom' target='main'>友情链接</a></li>-->
 			
 	 	</ul>
 </div>
