--- a/admin/view/default/mproduct/addfrom.html
+++ b/admin/view/default/mproduct/addfrom.html
@@ -32,8 +32,9 @@
 				
 				<tr>
 					<td class="td_bgc right_2">价格(元/年)</td>
-					<td class="td_bgc right_2"><input name="price" type="text" id='tb_wid3'	value="{{$mproduct.price/100}}">
-											
+					<td class="td_bgc right_2">
+					<input name="price" type="text" id='tb_wid3' value="{{$mproduct.price/100}}">
+					<input name="show_price" type="checkbox" value="1">前台按月显示
 					</td>
 				</tr>
 				
