--- a/user/view/default/mproductorder/pagelistmproductorder.html
+++ b/user/view/default/mproductorder/pagelistmproductorder.html
@@ -29,7 +29,7 @@
 					</tr>
 					
 					{{foreach from=$list item=row}}
-					<tr >
+					<tr class="testjs">
 					<td >
 						[<a href="?c=mproductorder&a=showMproductorder&id={{$row.id}}" >详情</a>]
 						[<a href="?c=mproductorder&a=renewMproductorderFrom&id={{$row.id}}" >续费</a>]
@@ -64,4 +64,3 @@
 		
 	</div>
 </div>
-</body>
