--- a/user/view/default/mproduct/index.html
+++ b/user/view/default/mproduct/index.html
@@ -1,25 +1,29 @@
-	<div >
-		<div >
-			{{if is_array($mproducts)}}
-				{{for $i=0;$i< count($mproducts);$i++}}
-				<table style="width:750px;background-color:white;border-collapse:collapse; border:2px solid #B3B3B3">
-					<tr >
-						<td style="width:15%;padding:5px;background-color:#EEEEE0;">
-							<a href='?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}'>{{$mproducts[$i].name}}</a>
-							<br><br>
-							{{$mproducts[$i].price/100}}&nbsp;元/年
-							<br><br>
-							<a href='?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}'>点击购买</a>
-						</td>
-						<td style="width:85%;padding:15px;background-color:#F5F5F5;">{{$mproducts[$i].describe}}</td>
-			  		</tr>
-			  			</table>
-			  			<br>
-			  	{{/for}}
-			{{/if}}
-		  	
-		</div>
-	</div>
-			
+	{{if $mproductgroup}}
+		{{$mproductgroup.describe}}
+	{{/if}}
+	{{if is_array($mproducts)}}
+		{{for $i=0;$i < count($mproducts);$i++}}
+			<div class="left_box Left_main_vh2 right_main">
+				<table >
+					<tr>
+					<td>
+						<a href='?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}'>{{$mproducts[$i].name}}</a>
+					</td>
+					</tr>
+					
+					<tr>
+					<td >{{$mproducts[$i].describe}}</td>
+					</tr>
+					
+					<tr>
+					<td>
+					{{$mproducts[$i].price/100}}&nbsp;元/年
+					<a href='?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}'>点击购买</a>
+					</td>
+					</tr>
+				</table>
+			</div>
+		{{/for}}
+	{{/if}}
+		
 
-	
