--- a/user/view/default/mproduct/showmproduct.html
+++ b/user/view/default/mproduct/showmproduct.html
@@ -8,7 +8,7 @@
 			</tr>
 			 
 			<tr>
-			     	<td>价格:&nbsp;&nbsp;&nbsp;&nbsp;{{$mproductinfo.price/100}}元/年</td>
+			   <td>价格:&nbsp;&nbsp;&nbsp;&nbsp;{{if $mproductinfo.show_price==1}}{{substr($mproductinfo.price/100/12,0,6)}}元/月{{else}}{{$mproductinfo.price/100}}元/年{{/if}}</td>
 			</tr>
 			      
 			<tr>
