--- a/user/view/default/public/showProductFrom.html
+++ b/user/view/default/public/showProductFrom.html
@@ -52,7 +52,7 @@
 	  
        <tr>
        <td>价格:</td>
-       	<td>{{$product_info.price/100}}元/年</td>
+       	<td>{{if $product_info.show_price==1}}{{substr($product_info.price/100/12,0,6)}}元/月{{else}}{{$product_info.price/100}}元/年{{/if}}</td>
         </tr>
         
 	    <tr>
