--- a/user/view/default/vhostproduct/sell.html
+++ b/user/view/default/vhostproduct/sell.html
@@ -116,7 +116,7 @@ function check_register()
 	  
        <tr>
        <td>价格:</td>
-       	<td>{{$product.price/100}}元/年</td>
+       	<td>{{if $product.show_price==1}}{{substr($product.price/100/12,0,6)}}元/月{{else}}{{$product.price/100}}元/年{{/if}}</td>
         </tr>
         
 	    <tr>
