--- a/user/view/default/mproduct/index.html
+++ b/user/view/default/mproduct/index.html
@@ -10,6 +10,9 @@
 	<td>
 	{{if is_array($mproducts)}}
 		{{for $i=0;$i < count($mproducts);$i++}}
+			{{if $i/3==0}}
+				<br>
+			{{/if}}
 			<div class="left_box Left_main_vh2 right_main">
 				<table >
 					<tr>
@@ -24,13 +27,13 @@
 					
 					<tr>
 					<td>
-					{{$mproducts[$i].price/100}}&nbsp;元/年
+					{{if $mproducts[$i].show_price==1}}{{substr($mproducts[$i].price/100/12,0,5)}}元/月{{else}}{{$mproducts[$i].price/100}}元/年{{/if}}
 					
 					</td>
 					</tr>
 					<tr>
 						<td>
-							<a href='?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}'>点击购买</a>
+							<a href='?c=mproductorder&a=addMproductorderFrom&mproduct_id={{$mproducts[$i].id}}'>点击购买</a>
 						</td>
 					</tr>
 				</table>
