--- a/admin/view/default/vhostproduct/listVhost.html
+++ b/admin/view/default/vhostproduct/listVhost.html
@@ -7,7 +7,7 @@
 	<div align="left">
 		<form name="form1" method="post" action="?c=vhost&a=showVhost">
 			<p>
-  			 <span class="topimg STYLE1">输入ftp用户名或#uid或域名:</span>
+  			 <span class="topimg STYLE1">输入用户名或#uid:</span>
    			<input name="user" type="text" id="user" value="{{$user}}" size="25">
    			<input type="submit" name="Submit" value="搜索">
  			 </p>
@@ -37,7 +37,7 @@
 					<td class="td_bgc right_2">所属用户</td>
 					<td class="td_bgc right_2">模板</td>
 					<td class="td_bgc right_2">服务器</td>
-					<td class="td_bgc right_2">路径</td>
+					<td class="td_bgc right_2">流量(M)</td>
 					<td class="td_bgc right_2">创建时间</td>
 					<td class="td_bgc right_2">过期时间</td>
 					<td class="td_bgc right_2">空间状态</td>					
@@ -55,7 +55,7 @@
 					<td class="td_bgc right_2"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
 					<td class="td_bgc right_2">{{$row.templete}}</td>
 					<td class="td_bgc right_2">{{$row.node}}</td>
-					<td class="td_bgc right_2">{{$row.doc_root}}</td>
+					<td class="td_bgc right_2">{{$row.flow}}</td>
 					<td class="td_bgc right_2">{{$row.create_time}}</td>
 					<td class="td_bgc right_2">{{$row.expire_time}}</td>
 					<td class="td_bgc right_2">
