--- a/user/view/default/mproduct/showmproduct.html
+++ b/user/view/default/mproduct/showmproduct.html
@@ -2,18 +2,14 @@
 	<div class="wid_ri r_mar" align="center">
 		<table id="table_shell" cellpadding="0" cellspacing="1">
 			<tr><td colspan="2" class="red"><b>{{$mproductinfo.name}}&nbsp;&nbsp;产品详请</b></td></tr>
-			
-			<tr>
-			      <td>{{$mproductinfo.describe}}</td>
-			</tr>
-			 
-			<tr>
-			   <td>价格:&nbsp;&nbsp;&nbsp;&nbsp;{{if $mproductinfo.show_price==1}}{{substr($mproductinfo.price/100/12,0,6)}}元/月{{else}}{{$mproductinfo.price/100}}元/年{{/if}}</td>
-			</tr>
-			      
-			<tr>
-			   <td class="td_hg" colspan="2" align="center">
-			<a href="?c=mproductorder&a=addMproductorderFrom&mproduct_id={{$mproductinfo.id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a></td>
+			<tr><td>{{$mproductinfo.describe}}</td></tr>
+			<tr><td>
+				价格:&nbsp;&nbsp;&nbsp;&nbsp;{{if $mproductinfo.show_price==1}}{{substr($mproductinfo.price/100/12,0,6)}}元/月
+				{{else}}{{$mproductinfo.price/100}}元/年{{/if}}
+			</td></tr>
+			<tr><td class="td_hg" colspan="2" align="center">
+				<a href="?c=mproductorder&a=addMproductorderFrom&mproduct_id={{$mproductinfo.id}}"><img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>
+				</td>
 			</tr>
 	    </table>
 	</div>
