--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -31,6 +31,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .Left_main {FLOAT: left; WIDTH: 263px;}
 .Left_main_vh {FLOAT: left; WIDTH: 213px;}
 .Left_main_vh2 {FLOAT: left; WIDTH: 225px;}
+.right_main_host {FLOAT: left; WIDTH: 240px;}
 .right_host_vh {FLOAT: left; WIDTH: 243px;}
 .Left_main_vh3 {FLOAT: left; WIDTH: 5px;}
 .right_main {FLOAT: left; margin-left:5px;}
