--- a/user/view/default/mproduct/index.html
+++ b/user/view/default/mproduct/index.html
@@ -1,5 +1,6 @@
 <table width='100%' border='0'>
-	<tr><td>
+  	  <tr>
+		<td colspan="2" background="{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
 		{{if $mproductgroup}}
 			{{$mproductgroup.describe}}
 		{{/if}}
@@ -10,15 +11,17 @@
 			{{if $i/3==0}}
 				<br>
 			{{/if}}
-			<div class="left_box Left_main_vh2 right_main">
-				<table >
-					<tr><td><a href='?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}'>{{$mproducts[$i].name}}</a></td></tr>
-					<tr><td >{{$mproducts[$i].describe}}</td></tr>
-					<tr><td>
+			<div class="left_box right_main_host right_main">
+				<table id="table_rr" cellpadding="0" cellspacing="0">
+					<tr><td align="center" class="right_hg3 color_orange"  background="{{$STATIC}}images/r_zj_228.jpg">
+						<a href='?c=mproduct&a=showMproductFrom&id={{$mproducts[$i].id}}'>{{$mproducts[$i].name}}</a></td></tr>
+					<tr><td class="right right_wid right_blue">{{$mproducts[$i].describe}}</td></tr>
+					<tr><td class="right right_wid right_blue" width="60">
 						{{if $mproducts[$i].show_price==1}}{{substr($mproducts[$i].price/100/12,0,5)}}元/月{{else}}{{$mproducts[$i].price/100}}元/年{{/if}}
 					</td></tr>
-					<tr><td>
-							<a href='?c=mproductorder&a=addMproductorderFrom&mproduct_id={{$mproducts[$i].id}}'>点击购买</a>
+					<tr><td class="right_hg3" align="center">
+							<a href='?c=mproductorder&a=addMproductorderFrom&mproduct_id={{$mproducts[$i].id}}'>
+							<img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>
 					</td></tr>
 				</table>
 			</div>
