--- a/admin/view/default/setting/setup.html
+++ b/admin/view/default/setting/setup.html
@@ -26,7 +26,11 @@
         <textarea name='contact'  rows='5' cols='50'>{{$setting.contact.value}}</textarea>
         </td>
       </tr>
-
+      <tr>
+        <td class='color01 right' bgcolor='#efefef'>foot定制（支持html）</td>
+        <td class="td_bgc right_2">
+        <textarea name='footer'  rows='5' cols='50'>{{$setting.footer.value}}</textarea></td>
+      </tr>
       <tr>
         <td class='color01 right' bgcolor='#efefef'>统计代码（支持html）</td>
         <td class="td_bgc right_2">
